[package]
name = "biotools"
version = "0.12"
authors = ["Jim Rybarski <jim@rybarski.com>"]
edition = "2021"
license = "MIT"
description = "Simple bioinformatics CLI tools for sequence analysis and manipulation"
repository = "https://github.com/jimrybarski/biotools"
homepage = "https://github.com/jimrybarski/biotools"
readme = "README.md"
keywords = ["bioinformatics"]
categories = ["command-line-utilities", "science::bioinformatics"]

[dependencies]
anyhow = "1.0.94"
bio = "2.0.3"
clap = { version = "4.5.23", features = ["derive"] }

[lints.rust]
unsafe_code = "forbid"
